--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
@@ -31,6 +32,8 @@
     "react-native-tooltip": "^5.2.0",
     "react-native-walkthrough-tooltip": "^1.5.0",
     "react-native-web": "~0.18.11",
+    "react-redux": "^8.1.0",
+    "redux": "^4.2.1",
     "rn-tooltip": "^3.0.3"
   },
   "devDependencies": {
