--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "crypto-js": "^4.1.1",
     "expo": "~48.0.18",
+    "expo-blur": "~12.2.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
     "react": "18.2.0",
@@ -35,8 +37,7 @@
     "react-native-web": "~0.18.11",
     "react-redux": "^8.1.0",
     "redux": "^4.2.1",
-    "rn-tooltip": "^3.0.3",
-    "expo-blur": "~12.2.2"
+    "rn-tooltip": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
