--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "expensemanagement",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -38,7 +37,8 @@
     "react-redux": "^8.1.0",
     "redux": "^4.2.1",
     "rn-tooltip": "^3.0.3",
-    "expo-sqlite": "~11.1.1"
+    "expo-sqlite": "~11.1.1",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
