--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "crypto-js": "^4.1.1",
     "expo": "~48.0.18",
     "expo-blur": "~12.2.2",
+    "expo-splash-screen": "~0.18.2",
+    "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
@@ -36,9 +39,7 @@
     "react-native-web": "~0.18.11",
     "react-redux": "^8.1.0",
     "redux": "^4.2.1",
-    "rn-tooltip": "^3.0.3",
-    "expo-sqlite": "~11.1.1",
-    "expo-splash-screen": "~0.18.2"
+    "rn-tooltip": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
